# reproducer-cxx-tm-autolinking

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-reproducer-cxx-tm-autolinking.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reproducercxxtmautolinking/: ReproducerCxxTmAutolinkingModule.java  ReproducerCxxTmAutolinkingPackage.java
cpp/: NativeCxxModuleExample.cpp  NativeCxxModuleExample.h  react-native-reproducer-cxx-tm-autolinking.cpp  react-native-reproducer-cxx-tm-autolinking.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/reproducercxxtmautolinkingexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ReproducerCxxTmAutolinkingExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ReproducerCxxTmAutolinkingExample.xcodeproj/: project.pbxproj
example/ios/ReproducerCxxTmAutolinkingExample.xcodeproj/xcshareddata/xcschemes/: ReproducerCxxTmAutolinkingExample.xcscheme
example/ios/ReproducerCxxTmAutolinkingExampleTests/: ReproducerCxxTmAutolinkingExampleTests.m
example/src/: App.tsx
ios/: ReproducerCxxTmAutolinking.h  ReproducerCxxTmAutolinking.mm
src/: NativeReproducerCxxTmAutolinking.ts  index.tsx
